--- a/.github/workflows/build-mod.yml
+++ b/.github/workflows/build-mod.yml
@@ -1,10 +1,9 @@
-name: Build Geode Mod
+name: Build Globed
 
 on:
   workflow_dispatch:
   push:
-    branches:
-      - "**"
+  pull_request:
 
 jobs:
   build:
@@ -12,42 +11,52 @@ jobs:
       fail-fast: false
       matrix:
         config:
-        - name: macOS
-          os: macos-latest
+          - name: Windows
+            os: windows-latest
 
-        - name: Android32
-          os: ubuntu-latest
-          target: Android32
+          - name: macOS
+            os: macos-latest
 
-        - name: Android64
-          os: ubuntu-latest
-          target: Android64
+          - name: iOS
+            os: macos-latest
+            target: iOS
+
+          - name: Android32
+            os: ubuntu-latest
+            target: Android32
+
+          - name: Android64
+            os: ubuntu-latest
+            target: Android64
 
     name: ${{ matrix.config.name }}
     runs-on: ${{ matrix.config.os }}
 
     steps:
-      - uses: actions/checkout@v4
+      - name: Checkout repository
+        uses: actions/checkout@v4
 
       - name: Build the mod
         uses: geode-sdk/build-geode-mod@main
         with:
-          sdk: nightly
-          bindings: geode-sdk/bindings
-          bindings-ref: main
-          combine: true
+          sdk: 'nightly'
+          cli: 'nightly'
+          configure-args: '-DGLOBED_RELEASE=ON'
+          combine: 'true'
           target: ${{ matrix.config.target }}
 
   package:
     name: Package builds
     runs-on: ubuntu-latest
-    needs: ['build']
+    needs: build
 
     steps:
-      - uses: geode-sdk/build-geode-mod/combine@main
+      - name: Combine builds
+        uses: geode-sdk/build-geode-mod/combine@main
         id: build
 
-      - uses: actions/upload-artifact@v4
+      - name: Upload build artifact
+        uses: actions/upload-artifact@v4
         with:
-          name: Build Output
+          name: Globed Build Output
           path: ${{ steps.build.outputs.build-output }}
