I hope this works >~<

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,7 +29,7 @@ if("${CMAKE_SYSTEM_NAME}" STREQUAL "Darwin")
     list(APPEND MOD_SOURCES src/macos.mm)
 elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "iOS")
     list(APPEND MOD_SOURCES src/ios.mm)
-    set_source_files_properties(src/macos.mm PROPERTIES SKIP_PRECOMPILE_HEADERS ON)
+    set_source_files_properties(src/ios.mm PROPERTIES SKIP_PRECOMPILE_HEADERS ON)
 elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "Android")
     list(APPEND MOD_SOURCES src/android.cpp)
 elseif("${CMAKE_SYSTEM_NAME}" STREQUAL "Windows")
